tests/neg/i2673.scala
//> using options -Xfatal-warnings

package Foos

class Foo // error
class foo
